# codegate

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  comprehensive_test.py  example_code.py  example_contract.yaml  example_test.py  failing_contract.yaml  mixed_contract.yaml  pyproject.toml
codegate/: README.md  __init__.py  cli.py  contract.py  executor.py
codegate/contract/: README.md  __init__.py  parser.py  schema.py
codegate/engine/: README.md  __init__.py  docker_runner.py  result.py  runner.py
codegate/rules/: README.md  __init__.py  base.py  build_import.py  build_imports.py  policy.py  quality.py  security_deps.py  security_sast.py  unit_tests.py
docs/: README.md  class-diagram-rules.md  directory-structure.md  sequence-diagram.md
examples/: README.md  codegate-results.json  contract-docker.yaml  contract-minimal.yaml  contract-no-rules.yaml  contract-python-package.yaml  contract-security-only.yaml  contract-testing-only.yaml  contract-with-custom-rule.yaml  test-build-imports-only.yaml  test.py
examples/big_project/: README.md  codegate-results.json  contract.yaml  pyproject.toml  requirements.txt
examples/big_project/big_project/: __init__.py  cli.py  (+1 more)
examples/sample_project/: __init__.py  calculator.py  codegate-results.json  contract.yaml  test_calculator.py
tests/: README.md  sitecustomize.py  test_big_end_to_end.py  test_build_imports_rule_more.py  test_build_imports_rule_more2.py  test_cli.py  test_cli_unit.py  test_docker_runner.py  test_docker_runner_command_building.py  test_docker_runner_more.py  test_parser.py  test_policy_rule.py  test_policy_rule_deps_resolution.py  test_policy_rule_distribution_names.py  test_rules_dockered.py  test_runner.py  test_runner_more.py  test_runner_more2.py  test_schema_validation.py  test_security_deps_rule_more2.py  test_security_rules_more.py  test_syntax_check.py  test_unit_tests_rule_more.py
(+9 files in other folders)
